--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 <body>
 <img src = "https://s3.amazonaws.com/ironboard-learn/lion.jpg">
 
-<img
+<img src= "https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt = "yawning lion">
 
+<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="yawning lion" title="I'm so tired!!"
 
 </body>
 </html>
