--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <img src= "https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt = "yawning lion">
 
-<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="yawning lion" title="I'm so tired!!"
+<img src="https://s3.amazonaws.com/ironboard-learn/lion.jp" alt="yawning lion" title="I'm so tired!!"
 
 </body>
 </html>
